kubernetesfile/customer.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer
  template:
    metadata:
      labels:
        app: customer
    spec:
      containers:
      - name: customer
        image: vaibhavpatil45/customer:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: customer
spec:
  selector:
    app: customer
  ports:
  - port: 8080
    targetPort: 8080
