kubernetesfile/microservices-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-alb-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

spec:
  rules:
  - http:
      paths:

      - path: /
        pathType: Prefix
        backend:
          service:
            name: apache
            port:
              number: 8080

      - path: /catalog
        pathType: Prefix
        backend:
          service:
            name: catalog
            port:
              number: 8080

      - path: /customer
        pathType: Prefix
        backend:
          service:
            name: customer
            port:
              number: 8080

      - path: /order
        pathType: Prefix
        backend:
          service:
            name: order
            port:
              number: 8080
